@@ -1,18 +1,22 @@
-## Getting Started
+# Server
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+Code for the Server of our project.
 
-## Folder Structure
+The port can be modified from the config.properties file.
 
-The workspace contains two folders by default, where:
+## Execution
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+For server execution:
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+```bash
+java -jar Server.jar
+```
+Or
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+```bash
+java --enable-preview -jar Server.jar
+```
 
-## Dependency Management
+## Author
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+[@AndresMaldonado200338](https://github.com/AndresMaldonado200338)
